log/build_2022-05-06_09-36-14/cam_client/stderr.log
  File "/app/dev_ws/install/cam_client/lib/python3.8/site-packages/cam_client/utils/myTIS.py", line 85
    def _createPipeline(self):
    ^
SyntaxError: invalid syntax

